--- a/css/style.css
+++ b/css/style.css
@@ -36,14 +36,14 @@ body {
 
 .what-we-do {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3,1fr);
   grid-gap: 60px;
   margin: 30px 0px 30px;
 }
 
 .portfolio {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4,1fr);
   align-items: center;
   justify-content: center;
   grid-row-gap: 50px;
@@ -94,4 +94,13 @@ textarea {
 
 .detail input {
   width: 30vw;
+}
+
+.socials {
+  display: grid;
+  grid-template-columns: repeat(9,1fr);
+  align-items: center;
+  justify-content: center;
+  /* margin: 0px 20px 0px 20px; */
+  /* grid-gap: 1px; */
 }
