--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ textarea {
   grid-template-columns: repeat(9,1fr);
   align-items: center;
   justify-content: center;
+  width: 35%;
   /* margin: 0px 20px 0px 20px; */
   /* grid-gap: 1px; */
 }
