--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,11 @@ body {
   grid-template-columns: repeat(4, 1fr);
   align-items: center;
   justify-content: center;
-  grid-row-gap: 50px;
-  grid-column-gap: 30px;
+  grid-gap: 45px 28px;
+}
+
+.overlay-wrapper > img {
+  width: 100%;
 }
 
 .overlay-wrapper {
@@ -60,16 +63,16 @@ body {
   z-index: 1;
   top: 0px;
   background: rgba(0, 0, 0, 0.8);
-  height: 300px;
-  width: 370px;
+  height: 250px;
+  width: 310px;
   display: none;
 }
 
 .overlay {
   border: solid 4px #ffffff;
   margin: 24px 0px 0px 26px;
-  height: 250px;
-  width: 310px;
+  height: 200px;
+  width: 260px; 
 }
 
 .contact {
@@ -188,9 +191,16 @@ textarea::placeholder {
 }
 
 @media only screen and (max-width: 1366px) {
-  .head {
-    height: 760px;
+  .header {
+    margin-left: 80px;
   }
+  .one {
+    margin-right: 100px;
+  }
+  .head {
+    height: 760px;  
+  }
+
   .logo {
     padding: 200px 0px 70px;
   }
@@ -208,7 +218,17 @@ textarea::placeholder {
   }
   
   .portfolio {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .overlay-cont {
+    height: 210px;
+    width: 260px;
+  }
+  
+  .overlay {
+    height: 160px;
+    width: 210px; 
   }
 
   #fname {
@@ -218,6 +238,10 @@ textarea::placeholder {
   textarea {
     margin: 0px 0px 0px 155px;
   } 
+
+  .socials {
+    width: 45%;
+  }
 }
 
 
@@ -240,12 +264,32 @@ textarea::placeholder {
 }
 
 @media only screen and (max-width: 750px) {
+  .logo {
+    padding: 260px 0px 40px;
+  }
+  
+  .mouse-icon {
+    padding-top: 270px;
+  }
+  
+  .about {
+    padding: 20px 10px 20px;
+  }
+
   .what-we-do {
     grid-template-columns:1fr;
   }
 
+  .services-content {
+    padding: 100px 0px 0px;
+  }
+
   .portfolio {
     grid-template-columns:  1fr
+  }
+
+  .overlay-wrapper > img {
+    width: 70%;
   }
 
   #fname {
@@ -257,6 +301,39 @@ textarea::placeholder {
   }
 
   .socials {
-    width: 70%;
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .header {
+    padding: 20px 20px 20px;
+    height: 40%;
+  }
+  .one {
+    padding: 20px 20px 20px;
+  
+  }
+  .logo {
+    padding: 150px 80px 40px;
+  }
+  
+  .mouse-icon {
+    padding-top: 270px;
+  } 
+  
+  .about {
+    padding: 20px 20px 20px;
+  }
+
+  .services-content {
+    padding: 80px 0px 0px;
+  }
+
+  .socials {
+    grid-template-columns: repeat(5, 1fr);
+    width: 80%;
+    font-weight: 8px;
+    padding-top: 10px;
   }
 }
